--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,8 @@ buck-out/
 */fastlane/Preview.html
 */fastlane/screenshots
 
+# Visual Studio code configs
 .vscode
+
+# TypeScript artifacts
+artifacts
