--- a/package.json
+++ b/package.json
@@ -1,23 +1,36 @@
 {
-	"name": "ReactPrototype",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest",
-		"start:ios": "react-native run-ios"
-	},
-	"dependencies": {
-		"react": "16.0.0",
-		"react-native": "0.50.3"
-	},
-	"devDependencies": {
-		"babel-jest": "21.2.0",
-		"babel-preset-react-native": "4.0.0",
-		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "ReactPrototype",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "tsc": "tsc",
+    "clean": "rimraf artifacts",
+    "watch": "npm run build -- -w",
+    "build": "npm run clean && npm run tsc --",
+    "lint": "tslint src/**/*.ts",
+    "start:ios": "npm run build && concurrently -r 'npm run watch' 'react-native run-ios'"
+  },
+  "dependencies": {
+    "react": "16.0.0",
+    "react-native": "0.50.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^21.1.8",
+    "@types/react": "^16.0.25",
+    "@types/react-native": "^0.50.7",
+    "babel-jest": "21.2.0",
+    "babel-preset-react-native": "4.0.0",
+    "concurrently": "^3.5.1",
+    "jest": "21.2.1",
+    "react-test-renderer": "16.0.0",
+    "rimraf": "^2.6.2",
+    "tsc": "^1.20150623.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
