--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run clean && npm run tsc --",
     "lint": "tslint src/**/*.ts",
     "test": "jest --coverage",
-    "start:ios": "npm run build && concurrently -r 'npm run watch' 'react-native run-ios'"
+    "start:ios": "npm run build && concurrently -r 'npm run watch' 'react-native run-ios'",
+    "start:treel": "npm run build && concurrently -r 'npm run watch' 'react-native run-ios --project-path \"../\"'"
   },
   "dependencies": {
     "react": "16.0.0",
